--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
+    "recharts": "^2.6.2",
     "styled-components": "^5.3.10",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
