--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tippyjs/react": "^4.2.6",
     "antd": "^5.4.6",
     "axios": "^1.4.0",
     "concurrently": "^8.0.1",
@@ -14,6 +15,7 @@
     "i18next": "^22.4.15",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.2",
     "react-router-dom": "^6.11.1",
