--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.2",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
